--- a/src/components/Committee.astro
+++ b/src/components/Committee.astro
@@ -7,6 +7,7 @@ interface CommitteeMember {
     linkedin?: string;
     github?: string;
     twitter?: string;
+    instagram?: string;
   };
 }
 
@@ -16,9 +17,10 @@ const committeeMembers: CommitteeMember[] = [
     role: "Advisor",
     image: "/committee/deena_advisor.webp",
     socialLinks: {
-      linkedin: "#",
+      linkedin: "https://www.linkedin.com/in/deena-lad-307645214/",
       github: "#",
       twitter: "#",
+      instagram: "https://www.instagram.com/dee.06/",
     },
   },
   {
@@ -26,9 +28,10 @@ const committeeMembers: CommitteeMember[] = [
     role: "Chairperson",
     image: "/committee/meera_chair.webp",
     socialLinks: {
-      linkedin: "#",
-      github: "#",
+      linkedin: "https://www.linkedin.com/in/prajapati-meera/",
+      github: "",
       twitter: "#",
+      instagram: "https://www.instagram.com/maprajapati_31/",
     },
   },
   {
@@ -36,9 +39,10 @@ const committeeMembers: CommitteeMember[] = [
     role: "Vice Chairperson",
     image: "/committee/rishabh_vice_chair.webp",
     socialLinks: {
-      linkedin: "#",
+      linkedin: "https://www.linkedin.com/in/rishabh-nandekar21/",
       github: "#",
       twitter: "#",
+      instagram: "https://www.instagram.com/rishabhxnandekar/",
     },
   },
   {
@@ -49,6 +53,7 @@ const committeeMembers: CommitteeMember[] = [
       linkedin: "#",
       github: "#",
       twitter: "#",
+      instagram: "https://www.instagram.com/devarsh.13/",
     },
   },
   {
@@ -59,6 +64,7 @@ const committeeMembers: CommitteeMember[] = [
       linkedin: "#",
       github: "#",
       twitter: "#",
+      instagram: "https://www.instagram.com/soundwavedev/",
     },
   },
   {
@@ -69,6 +75,7 @@ const committeeMembers: CommitteeMember[] = [
       linkedin: "#",
       github: "#",
       twitter: "#",
+      instagram: "https://www.instagram.com/bhumica371/",
     },
   },
   {
@@ -79,9 +86,11 @@ const committeeMembers: CommitteeMember[] = [
       linkedin: "#",
       github: "#",
       twitter: "#",
+      instagram: "https://www.instagram.com/sharmiii_28/",
     },
   },
 ];
+
 ---
 
 <section id="committee" class="section committee">
