--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Footer from '../components/Footer.astro';
 		<Hero />
 		<About />
 		<Events />
-		<UpcomingEvents />
+		<!-- <UpcomingEvents /> -->
 		<Gallery />
 		<Committee />
 		<Membership />
